--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,17 @@
         <section class="leaderboard">
           <div class="recent-scores">
             <h2>Recent scores</h2>
-            <button>Refresh</button>
+            <button class="refresh-btn">Refresh</button>
           </div>
           <div class="scores">
-            <ul>
-              <li>Name: 100</li>
-              <li>Name: 100</li>
-              <li>Name: 100</li>
-              <li>Name: 100</li>
-              <li>Name: 100</li>
+            <ul class="scores-list">
               <li>Name: 100</li>
             </ul>
           </div>
         </section>
         <aside>
           <h2>Add your score</h2>
-          <form>
+          <form id="data-form">
             <input type="text" placeholder="Your name" />
             <input type="text" placeholder="Your score" />
             <button>Submit</button>
